This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: compile warnings of _PySlice_Unpack in 2.7
Type: Stage: resolved
Components: Versions: Python 2.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: serhiy.storchaka, xiang.zhang
Priority: normal Keywords:

Created on 2017-04-15 07:46 by xiang.zhang, last changed 2022-04-11 14:58 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 1154 merged serhiy.storchaka, 2017-04-15 09:53
Messages (3)
msg291708 - (view) Author: Xiang Zhang (xiang.zhang) * (Python committer) Date: 2017-04-15 07:46
Compile 2.7 now get many warning about _PySlice_Unpack, not in 3.x. See an example: http://buildbot.python.org/all/builders/x86%20Ubuntu%20Shared%202.7/builds/109/steps/compile/logs/warnings%20%2822%29.
msg291722 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2017-04-15 17:11
New changeset 5e79321742cb3af2184d22e2148c6756cade1864 by Serhiy Storchaka in branch '2.7':
bpo-30074: Fix compile warnings of _PySlice_Unpack and convert missed (#1154)
https://github.com/python/cpython/commit/5e79321742cb3af2184d22e2148c6756cade1864
msg291723 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2017-04-15 17:12
Thank you for pointing on this and for your review Xiang!
History
Date User Action Args
2022-04-11 14:58:45adminsetgithub: 74260
2017-04-15 17:12:20serhiy.storchakasetstatus: open -> closed
resolution: fixed
messages: + msg291723

stage: resolved
2017-04-15 17:11:14serhiy.storchakasetmessages: + msg291722
2017-04-15 09:53:08serhiy.storchakasetpull_requests: + pull_request1285
2017-04-15 07:46:43xiang.zhangcreate