bpo-30074: Fix compile warnings of _PySlice_Unpack and convert missed PySlice_GetIndicesEx in _ctypes.c.